--- a/Calculater/index.css
+++ b/Calculater/index.css
@@ -1,6 +1,7 @@
 body {
-	background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+	background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
 	min-height: 100vh;
@@ -56,7 +57,7 @@ body {
 .result {
 	outline: none;
 	border: none;
-	background: #fafafa;
+	background: #f8f8f8;
 	margin: 8px 6px;
 	border-radius: 8px;
 	text-align: right;
@@ -65,4 +66,16 @@ body {
 	font-family: Helvetica;
 	padding: 0 20px;
 	color: #999;
+}
+
+@media screen and (max-width: 568px){
+	.container{
+		--button-width: 20vw;
+		--button-height: 20vw;
+		padding: 6vw;
+	}
+	.container button{
+		border-radius: 10vw;
+		font-size: 6vw;
+	}
 }
